sql/sql_yacc.yy
@@ -13432,7 +13432,7 @@ literal:
                                     str ? str->length() : 0,
                                     $1);
             if (!item_str ||
-                !item_str->check_well_formed_result(&item_str->str_value, TRUE))
+                !item_str->check_well_formed_result(true))
             {
               MYSQL_YYABORT;
             }
@@ -13461,7 +13461,7 @@ literal:
                                     str ? str->length() : 0,
                                     $1);
             if (!item_str ||
-                !item_str->check_well_formed_result(&item_str->str_value, TRUE))
+                !item_str->check_well_formed_result(true))
             {
               MYSQL_YYABORT;
             }
